feat: allow changing watchers name and filtering by name
